<resources>
    <string name="app_name">Kursus UTBK</string>
    <string name="desc_app">Sebuah platform yang membantu educator untuk memperoleh penghasilan dengan mengajar dan membagikan konten pembelajaran terutama di bidang UTBK</string>
<!--    <string name="prodi_name">Program Studi</string>-->
    <string name="kursus_name">Kursus</string>
    <string name="hitung">Hitung</string>
    <string name="total_pembayaran">Total Pembayaran %1$.2f</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="waktu_kursus">Waktu Pertemuan (tiap pekan)</string>
    <string name="harga_prodi">Biaya</string>
    <string name="short_message">Terima kasih atas pembayaran</string>

    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="copyright">Sebuah platform yang membantu guru untuk memperoleh penghasilan dengan mengajar serta membagikan materi dan latihan soal UTBK.\n\n
        Aplikasi ini dibuat untuk kelas Mobpro 1.
        Temukan kodenya di https://github.com/indraazimi/hitung-bmi\n\nCopyright © 2022 Luthfi Ardiansyah.\n
        6706201136.
    </string>
    <string name="bagikan">Bagikan</string>
    <string name="bagikan_template">Nama: %1$s \nKelompok studi: %2$s \nKelompok ujian: %3$s\n\n%4$s\n%5$s</string>

    <string name="belum_ada_data">Belum ada data</string>
    <string name="histori">Histori</string>
    <string name="hapus_histori">Hapus Histori</string>

    <string name="konfirmasi_hapus">Hapus semua histori?</string>
    <string name="hapus">Hapus</string>
    <string name="batal">Batal</string>

    <string name="hasil_x">Biaya: %1$.2f - %2$s</string>
    <string name="data_x">Jenis ujian: %1$s</string>

    <string name="name_invalid">Nama tidak boleh kosong.</string>
    <string name="time_invalid">Waktu tidak boleh kosong.</string>
    <string name="utbk_name_invalid">Kelompok Studi tidak boleh kosong.</string>
    <string name="study_group_invalid">Kelompok Ujian tidak boleh kosong.</string>
    <string name="price_invalid">Harga tidak boleh kosong.</string>

<!--    <string name="prog_intensif">Intensif</string>-->
<!--    <string name="prog_reguler">Reguler</string>-->
<!--    <string name="prog_bootcamp">Bootcamp</string>-->
    <string name="saintek">Saintek</string>
    <string name="soshum">Soshum</string>
    <string name="campuran">Campuran</string>
    <string name="lihat_program">Lihat Program</string>
    <string name="kelas">Selamat bergabung di program %1$s</string>
    <string name="utbk_name">Kelompok Ujian</string>
    <string name="study_group">Kelompok Studi</string>
    <string-array name="study_groups">
        <item />
        <item>Saintek</item>
        <item>Soshum</item>
        <item>Campuran</item>
    </string-array>

    <string-array name="list_study_group_saintek">
        <item />
        <item>Matematika IPA</item>
        <item>Fisika</item>
        <item>Biologi</item>
        <item>Kimia</item>
    </string-array>

    <string-array name="list_study_group_soshum">
        <item />
        <item>Matematika Soshum</item>
        <item>Ekonomi</item>
        <item>Geografi</item>
        <item>Sejarah</item>
        <item>Sosiologi</item>
    </string-array>

    <string-array name="list_study_group_campuran">
        <item />
        <item>Matematika IPA</item>
        <item>Fisika</item>
        <item>Biologi</item>
        <item>Kimia</item>
        <item>Matematika Soshum</item>
        <item>Ekonomi</item>
        <item>Geografi</item>
        <item>Sejarah</item>
        <item>Sosiologi</item>
    </string-array>

    <string name="intensif">Intensif</string>
    <string name="reguler">Reguler</string>
    <string name="bootcamp">Bootcamp</string>

    <string name="fasilitas_intensif"><b><big>Fasilitas Program Intensif</big></b>
        \n <li>Akses ribuan video belajar UTBK</li>
        \n <li>Dapat bertanya seputar UTBK via video conference</li>
        \n <li>Terdapat handbook paket kilat UTBK</li>
    </string>

    <string name="fasilitas_reguler"><b><big>Fasilitas Program Reguler</big></b>
        \n <li>Try Out diadakan setiap pekan</li>
        \n <li>Pembahasan dilakukan sehari setelah try out diadakan</li>
        \n <li>Tanya jawab soal dapat secara online maupun offline</li>
    </string>

    <string name="fasilitas_bootcamp"><b><big>Fasilitas Program Bootcamp</big></b>
        \n <li>Bimbingan offline selama satu bulan menjelang pelaksanaan UTBK</li>
        \n <li>Evaluasi belajar setelah pelaksanaan latihan soal seputar UTBK</li>
        \n <li>Konsumsi makan 3x sehari serta coffee break 2x</li>
    </string>
</resources>